PZHelper // Fix 2 localization review marks.

--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -12943,13 +12943,13 @@
         },
         "zh-Hans" : {
           "stringUnit" : {
-            "state" : "needs_review",
+            "state" : "translated",
             "value" : "统配指纹"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
-            "state" : "needs_review",
+            "state" : "translated",
             "value" : "統配指紋"
           }
         }
