i18n // Typo fix (cht): 點擊 -> 點按.

--- a/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -766,7 +766,7 @@
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "點擊此處匯出"
+            "value" : "點按此處匯出"
           }
         }
       }
@@ -5377,7 +5377,7 @@
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "或點擊下述受米遊社管轄的 UID 直接獲取記錄: "
+            "value" : "或點按下述受米遊社管轄的 UID 直接獲取記錄: "
           }
         }
       }
