--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -2231,7 +2231,7 @@
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "點擊這裡查看最近的暫存結果。"
+            "value" : "點按這裡查看最近的暫存結果。"
           }
         }
       }
@@ -4463,7 +4463,7 @@
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "請在打開的網頁完成登入 HoYoLab 操作後點擊「完成」。如果彈出人機驗證的話，請完成之。"
+            "value" : "請在打開的網頁完成登入 HoYoLab 操作後點按「完成」。如果彈出人機驗證的話，請完成之。"
           }
         }
       }
@@ -6771,7 +6771,7 @@
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "請點擊這裡完成人機驗證"
+            "value" : "請點按這裡完成人機驗證"
           }
         }
       }
@@ -13026,7 +13026,7 @@
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "為米遊社管理的UID設定的本機帳號建議使用相同的設備指紋（x-rpc-device_fp）以確保認證一致。點擊「統配指紋」按鈕將相同的設備指紋應用於所有此類本機帳號。"
+            "value" : "為米遊社管理的UID設定的本機帳號建議使用相同的設備指紋（x-rpc-device_fp）以確保認證一致。點按「統配指紋」按鈕將相同的設備指紋應用於所有此類本機帳號。"
           }
         }
       }
@@ -13947,7 +13947,7 @@
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "玩家體力計時器依賴iOS的即時動態功能來運作。您可以點擊今日頁籤下的任一本機帳號的實時便箋旁邊的三個點圓圈來啟動它。"
+            "value" : "玩家體力計時器依賴iOS的即時動態功能來運作。您可以點按今日頁籤下的任一本機帳號的實時便箋旁邊的三個點圓圈來啟動它。"
           }
         }
       }
